--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 # # # # # # # #
 
 # Basic
-name:               "Kording Lab"
-title:              "Kording Lab at the University of Pennsylvania"
-description:        "The Kording Lab is a computational neuroscience and causality research group at the University of Pennsylvania."
+name:               "Stanley Nelson Lab"
+title:              "Stanley Nelson Lab at the University of California Los Angeles"
+description:        "The Stanley Nelson Lab is a human rare diseases research group at the University of California Los Angeles."
 
 
 # URL
-url:                http://kordinglab.com
+url:                http://uclanelsonlab.github.io
 baseurl:            
 #baseurl:            "" #For Root Domain
 permalink:          /:year/:month/:day/:title.html
@@ -30,8 +30,8 @@ nav:
     href:           "/publication"
   - name:           "people"
     href:           "/people"
-  # - name:           "blog"
-    # href:           "/blog"
+  - name:           "samples_archive"
+    href:           "/samples_archive"
 #   - name:           "abstracts"
 #     href:           "/abstracts"
   - name:           "lab teachings"
